# Primality-testing

./: .gitignore  CMakeLists.txt  README.md  delete.py  run_benchmark.sh  test_large.py
data/: bench0.txt  bench1.txt  bench2.txt  bench3.txt  bench4.txt  bench5.txt  bench6.txt  bench7.txt  bench8.txt  bench9.txt  callgrind.out.0  callgrind.out.36770  callgrind.out.37544  large_primes_time.ipynb  largest_achieved.ipynb  massif.out.0  massif.out.32331  massif.out.34310  time_per_num.ipynb
src/: bigint.hpp  helpers.hpp  main.cpp  temp_test.cpp
src/bailliePsw/: bailliePsw.cpp  bailliePsw.hpp
src/examples/: temp_test.cpp
src/millerRabin/: millerRabin.cpp  millerRabin.hpp
src/primalityTest/: primalityTest.hpp
src/trialDivision/: trial.cpp  trial.hpp
src/trial_division/: trial.cpp
